--- a/hellow.yaml
+++ b/hellow.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: hellow
+  name: hellows
   labels:
-    name: hellow
+    name: hellows
 ---
 
 apiVersion: extensions/v1beta1
