--- a/app/templates/deployment.yaml
+++ b/app/templates/deployment.yaml
@@ -12,7 +12,7 @@ spec:
     spec:
       containers:
       - name: hellows-app
-        image: bihanc/jenkinspipe:8
+        image: bihanc/jenkinspipe:${build_number}
         ports:
         - containerPort: 8080
         livenessProbe:
