--- a/app/Chart.yaml
+++ b/app/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "${build_number}"
 description: A Helm chart for Kubernetes
-name: app
-version: 0.1.0
+name: test-app
+version: ${build_number}
