--- a/app/Chart.yaml
+++ b/app/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-appVersion: "${build_number}"
+appVersion: "1.0"
 description: A Helm chart for Kubernetes
 name: app
-version: ${build_number}
+version: '${build_number}'
