--- a/app/templates/deployment.yaml
+++ b/app/templates/deployment.yaml
@@ -12,13 +12,13 @@ spec:
     spec:
       containers:
               - name: hellows-app: $build_number
-        image: bihanc/jenkinspipe:{{build_number}}
+        image: bihanc/jenkinspipe: {{build_number}}
         ports: {{build_number}}
         - containerPort: 8080
         livenessProbe: $build_number
          httpGet: $number
           path: /health/live
-          port: 8080
+          port: 8080 : {{values}}
           httpHeaders: $$build_number
           - name: X-Custom-Header
             value: Awesome
